...
        }}
      />

      <Tabs.Screen
        name="player"
        options={{
          title: 'Player',
          headerShown: false,
          tabBarIcon: ({ color }) => (
            <Ionicons name="play-circle" size={28} color={color} />
          ),
          tabBarButton: ({ ref, ...props }) => (
            <Pressable
...
        }}
      />

      <Tabs.Screen
        name="clips"
        options={{
          title: 'Clips',
          headerShown: false,
          tabBarIcon: ({ color }) => (
            <Ionicons name="bookmark" size={28} color={color} />
          ),
        }}
      />
...
